<resources>
    <string name="app_name">training project</string>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_new_student">Add new member</string>
    <string name="title_activity_find">Search</string>
    <string name="title_activity_member_info">Member Info</string>
    <string name="title_activity_splash"></string>
    
    <string name="iti">ITI</string>
    <string name="training">training</string>
    <string name="project">project</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="staff">Staff</string>
    <string name="std">Student</string>
    <string name="btnsave">Save</string>
    <string name="btnclose">Close</string>
    <string name="nameorid">search by name or id</string>
    <string name="btnSearch">Search</string>
    <string-array name="genderArray">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
