<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dell.project.SplashAcivity"
    android:gravity="center">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iti"
        android:textSize="70sp"
        android:gravity="center"
        android:id="@+id/iti"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
      />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training"
        android:textSize="15sp"
        android:id="@+id/t"
        android:layout_toRightOf="@+id/iti"
        android:layout_alignBottom="@+id/iti"
        android:layout_marginLeft="-30sp"
        android:textColor="@color/colorPrimary"
      />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project"
        android:textSize="15sp"
        android:id="@+id/p"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/iti"
        android:layout_alignEnd="@+id/t" />

</RelativeLayout>
